k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o .
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o .
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: local-env
          image: palms-backend:local
          name: backend
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
