k8s/mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o .
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mailhog
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o .
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: mailhog
    spec:
      containers:
        - image: mailhog/mailhog:v1.0.1
          name: mailhog
          ports:
            - containerPort: 1025
              protocol: TCP
            - containerPort: 8025
              protocol: TCP
      restartPolicy: Always
