k8s/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o .
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mailhog
  name: mailhog
spec:
  ports:
    - name: "1025"
      port: 1025
      targetPort: 1025
    - name: "8025"
      port: 8025
      targetPort: 8025
  selector:
    io.kompose.service: mailhog
