k8s/palms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palms
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
